added --only-show-errors flag get-credentials

--- a/common/cd-steps.yaml
+++ b/common/cd-steps.yaml
@@ -23,7 +23,8 @@ steps:
     az aks get-credentials \
         -n $(aks) \
         -g $(rg) \
-        --admin
+        --admin \
+        --only-show-errors
 
     # in K8S AAD cluster, use kubelogin to convert the kube config obtained
     # in the previous step
