--- a/common/cd-steps.yaml
+++ b/common/cd-steps.yaml
@@ -22,10 +22,9 @@ steps:
     # Note: --admin added here because my spn can do that
     az aks get-credentials \
         -n $(aks) \
-        -g $(rg) 
-        # \
-        # --admin \
-        # --only-show-errors
+        -g $(rg) \
+        --admin \
+        --only-show-errors
 
     # in K8S AAD cluster, use kubelogin to convert the kube config obtained
     # in the previous step
